# build-version

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-verson-workflow.yaml
build_version/: main.py
build_version/common/: interfaces.py  process_base.py  utils.py
build_version/lib/: custom_semver.py  github_api.py  interfaces.py  utils.py
tests/helpers/: helper_test.py
tests/unit/: generate_version_unit_test.py
